--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "name": "swift-cloud",
   "description": "Taylor Swift songs query api.",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.ts",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 tap --ts \"test/**/*.test.ts\"",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
+    "start": "npm run build:ts && Node dist/server.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev:start-old": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
+    "dev:start": "node --watch dist/server.js"
   },
   "keywords": [],
   "author": "Phuong Nguyen",
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/mongodb": "^8.0.0",
     "@fastify/sensible": "^5.0.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.8.0",
