--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 tap --ts \"test/**/*.test.ts\"",
     "start": "npm run build:ts && Node dist/server.js",
     "build:ts": "tsc",
-    "eslint": "eslint .",
+    "lint": "eslint .",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
     "dev:start-old": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
