Fix unit test for query-service
Trim in query parser
Add unit tests for query-parser

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 tap --ts \"test/**/*.test.ts\"",
-    "start": "npm run build:ts && Node dist/server.js",
-    "build:ts": "tsc",
+    "test": "npm run build && tsc -p test/tsconfig.json && c8 tap --ts \"test/**/*.test.ts\"",
+    "start": "npm run build && Node dist/server.js",
+    "build": "tsc",
     "lint": "eslint .",
-    "watch:ts": "tsc -w",
-    "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
+    "watch": "tsc -w",
+    "dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch\" \"npm:dev:start\"",
     "dev:start-old": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
     "dev:start": "node --watch dist/server.js"
   },
