--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/mongodb": "^8.0.0",
     "@fastify/sensible": "^5.0.0",
+    "@fastify/swagger": "^8.10.1",
+    "@fastify/swagger-ui": "^1.9.3",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.8.0",
     "fastify-plugin": "^4.0.0",
